--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,5 +1,6 @@
-<article (click)="onSelect()">
-  <img [src]="product()?.thumbnail" alt="Product" />
-  <h1>{{ product()?.title }}</h1>
-  <p>{{ product()?.description }}</p>
+<article class="product-card">
+    <img [src]="product()?.thumbnail" alt="Product" />
+    <h1>{{ product()?.title }}</h1>
+    <p>{{ product()?.description }}</p>
+    <button (click)="onSelect()">Learn More</button>
 </article>
